# VisRTX

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
device/: CMakeLists.txt  Object.cpp  Object.h  ParameterInfo.h  RegisteredObject.h  VisRTXDevice.cpp  VisRTXDevice.h  VisRTXDeviceDebugFactory.cpp  VisRTXDeviceQueries.cpp  VisRTXFeatureUtility.cpp  optix_visrtx.cpp  optix_visrtx.h  visrtx_array1d_dynamic_region.json  visrtx_device.json  visrtx_sampler_color_map.json
device/array/: Array.cpp  Array.h  Array1D.cpp  Array1D.h  Array2D.cpp  Array2D.h  Array3D.cpp  Array3D.h  ObjectArray.cpp  ObjectArray.h
device/camera/: Camera.cpp  Camera.h  Orthographic.cpp  Orthographic.h  Perspective.cpp  Perspective.h  UnknownCamera.cpp  UnknownCamera.h
device/frame/: Denoiser.cu  Denoiser.h  Frame.cu  Frame.h
device/gpu/: cameraCreateRay.h  computeAO.h  createScreenSample.h  curveHelpers.h  dda.h  getMaterialValues.h  gpu_debug.h  gpu_decl.h  gpu_math.h  gpu_objects.h  gpu_util.h  intersectRay.h  populateHit.h  sampleLight.h  sampleSpatialField.h  shading_api.h  uniformGrid.h  volumeIntegration.h
device/renderer/: AmbientOcclusion.cpp  AmbientOcclusion.h  AmbientOcclusion_ptx.cu  Debug.cpp  Debug.h  DebugMethod.h  Debug_ptx.cu  DiffusePathTracer.cpp  DiffusePathTracer.h  DiffusePathTracer_ptx.cu  Raycast.cpp  Raycast.h  Raycast_ptx.cu  Renderer.cpp  Renderer.h  SciVis.cpp  SciVis.h  SciVis_ptx.cu  Test.cpp  Test.h  Test_ptx.cu  UnknownRenderer.cpp  UnknownRenderer.h
device/scene/: Group.cpp  Group.h  Instance.cpp  Instance.h  Intersectors_ptx.cu  World.cpp  World.h
device/scene/light/: Ambient.cpp  Ambient.h  Directional.cpp  Directional.h  Light.cpp  Light.h  Point.cpp  Point.h  UnknownLight.cpp  UnknownLight.h
device/scene/surface/: Surface.cpp  Surface.h
device/scene/volume/: SciVisVolume.cpp  SciVisVolume.h  UnknownVolume.cpp  UnknownVolume.h  Volume.cpp  Volume.h
device/utility/: AnariAny.h  AnariTypeHelpers.h  DeferredArrayUploadBuffer.cpp  DeferredArrayUploadBuffer.h  DeferredCommitBuffer.cpp  DeferredCommitBuffer.h  DeferredUploadBuffer.cpp  DeferredUploadBuffer.h  DeviceBuffer.h  DeviceObject.h  DeviceObjectArray.h  HostDeviceArray.h  ParameterizedObject.cpp  ParameterizedObject.h  TimeStamp.cpp  TimeStamp.h  colorMapHelpers.h  instrument.cpp  instrument.h  populateAttributePtr.h
devices/gl/: .clang-format  CMakeLists.txt  README.md  license.txt  visgl_device.json  visgl_gl_context_params.json  visgl_occlusion_params.json  visgl_precision_params.json  visgl_renderer_visgl.json  visgl_shadow_map_params.json
devices/gl/src/: AppendableShader.h  ConcurrentArray.h  DrawCommand.h  MaterialMacros.h  VisGLArrayObjects.cpp  VisGLArrayObjects.h  VisGLCameraOrthographicObject.cpp  VisGLCameraOrthographicObject.h  VisGLCameraPerspectiveObject.cpp  VisGLCameraPerspectiveObject.h  VisGLDevice.cpp  VisGLDevice.h  VisGLDeviceObject.cpp  VisGLDeviceObject.h  VisGLFrameObject.cpp  VisGLFrameObject.h  VisGLGeometryCylinderObject.cpp  VisGLGeometryCylinderObject.h  VisGLGeometrySphereObject.cpp  VisGLGeometrySphereObject.h  VisGLGeometryTriangleObject.cpp  VisGLGeometryTriangleObject.h  VisGLGroupObject.cpp  VisGLGroupObject.h  VisGLInstanceObject.cpp  VisGLInstanceObject.h  VisGLLibrary.cpp  VisGLLightDirectionalObject.cpp  VisGLLightDirectionalObject.h  VisGLLightPointObject.cpp  VisGLLightPointObject.h  VisGLLightSpotObject.cpp  VisGLLightSpotObject.h  VisGLMaterialMatteObject.cpp  VisGLMaterialMatteObject.h  VisGLMaterialPbrObject.cpp  VisGLMaterialPbrObject.h  VisGLMaterialTransparentMatteObject.cpp  VisGLMaterialTransparentMatteObject.h  VisGLObject.h  (+34 more)
devices/gl2/: CMakeLists.txt  GLContextInterface.cpp  GLContextInterface.h  Object.cpp  Object.h  README.md  TaskQueue.h  VisGL2Definitions.json  VisGL2Device.cpp  VisGL2Device.h  VisGL2DeviceGlobalState.cpp  VisGL2DeviceGlobalState.h  VisGL2Library.cpp  VisGL2Math.h  ogl.h
devices/gl2/array/: Array1D.h  Array2D.h  Array3D.h  ObjectArray.h
devices/gl2/camera/: Camera.cpp  Camera.h
devices/gl2/frame/: Frame.cpp  Frame.h
devices/gl2/renderer/: Renderer.cpp  Renderer.h
devices/gl2/scene/: Group.cpp  Group.h  Instance.cpp  Instance.h  World.cpp  World.h
devices/libmdl/: ArgumentBlockDescriptor.cpp  ArgumentBlockDescriptor.h  ArgumentBlockInstance.cpp  ArgumentBlockInstance.h  CMakeLists.txt  Core.cpp  Core.h  TimeStamp.cpp  TimeStamp.h  helpers.cpp  helpers.h  ptx.cpp  ptx.h  types.h  uuid.h
devices/rtx/: CMakeLists.txt  Object.cpp  Object.h  RegisteredObject.h  VisRTXDevice.cpp  VisRTXDevice.h  VisRTXDeviceDebugFactory.cpp  VisRTXDeviceQueries.cpp  VisRTXDeviceQueries.h  VisRTXFeatureUtility.cpp  VisRTXLibrary.cpp  nv_array_cuda.json  nv_frame_buffers_cuda.json  optix_visrtx.cpp  optix_visrtx.h  process_json.cmake  visrtx_array1d_dynamic_region.json  visrtx_array_cuda.json  visrtx_cuda_output_buffers.json  visrtx_device.json  visrtx_geometry_neural.json  visrtx_instance_attributes.json  visrtx_instance_transform_array.json  visrtx_material_mdl.json  visrtx_spatial_field_nanovdb.json  visrtx_triangle_attribute_indexing.json  visrtx_triangle_back_face_culling.json  visrtx_triangle_face_varying_attributes.json  visrtx_uniform_attributes.json
devices/rtx/array/: Array.cpp  Array.h  Array1D.cpp  Array1D.h  (+10 more)
examples/renderpipeline/: CMakeLists.txt  RenderPass.cu  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  pipeline_example.cpp
examples/simple/: CMakeLists.txt  testApp_evictGPUArray.cpp  testApp_spheres.cpp
examples/viewer/: CMakeLists.txt  Orbit.cpp  Orbit.h  Scene.cpp  Scene.h  Viewer.cpp  Viewer.h  main.cpp  ui_scenes.cpp  ui_scenes.h
tools/visrtxCompileShaders/: CMakeLists.txt  main.cpp
tsd/: CMakeLists.txt  README.md
tsd/apps/: CMakeLists.txt
tsd/cmake/: mark_cache_variables_as_advanced.cmake
tsd/python/: e57_to_binary.py
tsd/src/: CMakeLists.txt
tsd/tests/: CMakeLists.txt  test_Array.cpp  test_DataTree.cpp  test_FlatMap.cpp  test_Forest.cpp  test_Geometry.cpp  test_IndexedVector.cpp  test_Material.cpp  test_Math.cpp  test_Object.cpp  test_Parameter.cpp  test_Token.cpp
(+770 files in other folders)
